# OpenMC-Agent

./: .dockerignore  .env.example  .gitignore  AGENTS.md  CLAUDE.md  Dockerfile  Makefile  Plan.md  README.md  TODO.md  environment.yml  pyproject.toml
.devcontainer/: devcontainer.json
Input/: VERA1_problem.md  VERA2_problem.md  VERA3_problem.md  VERA4_problem.md  VERA5_problem.md  case1.md  case2.md  case3.md  knowledge_sources.json
docs/: README.md  benchmark_and_ablation_strategy.md  cloud_environment.md  current_capability_matrix.md  error_taxonomy_draft.md  evaluation.md  evidence_ranking_strategy.md  full_core_mvp.md  graphrag_query_planner_strategy.md  graphrag_retriever_strategy.md  grep_search_strategy.md  knowledge_graph_strategy.md  knowledge_ingestion_strategy.md  knowledge_runtime_strategy.md  phase4_preexisting_failure_baseline.md  phase5_preexisting_failure_baseline.md  phase6_preexisting_failure_baseline.md  phase7a_preexisting_failure_baseline.md  phase8_step7_final_report.md  phase8_step7_vera4_mu_failure_analysis.md  phase8b_step1_retry_and_binding_gap_analysis.md  phase8b_step2_facts_failure_analysis.md  phase8b_step3_facts_gate_analysis.md  phase8b_step4_canary_failure_analysis.md  phase8b_step4_mu_analysis.md  phase8b_step4b1_universe_fragment_transaction.md  phase8c_step0_facts_truth_audit.md  phase8c_step0_to_step2_final_report.md  phase8c_step2d_completion_report.md  phase8c_step2d_llm_robustness_design.md  phase8c_step2e_completion_report.md  phase8c_step2e_facts_gate_closure_design.md  phase8c_step3a_canary_analysis_report.md  phase8c_step3a_completion_report.md  phase8c_step3b_completion_report.md  (+35 more)
tests/: conftest.py  (+440 more)
(+365 files in other folders)
